--- a/Copy_of_C2W1_Assignment.ipynb
+++ b/Copy_of_C2W1_Assignment.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "dn-6c02VmqiN",
         "tags": [
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "id": "3sd9dQWa23aj",
         "lines_to_next_cell": 2,
@@ -70,23 +70,23 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "63054ca2-0bc9-4c77-c7f6-4a7e01270c7d"
+        "outputId": "7bbcee49-0696-495e-9d6d-18de3e016125"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-10-23 06:21:57--  https://download.microsoft.com/download/3/E/1/3E1C3F21-ECDB-4869-8368-6DEBA77B919F/kagglecatsanddogs_5340.zip\n",
+            "--2022-10-23 07:45:46--  https://download.microsoft.com/download/3/E/1/3E1C3F21-ECDB-4869-8368-6DEBA77B919F/kagglecatsanddogs_5340.zip\n",
             "Resolving download.microsoft.com (download.microsoft.com)... 23.40.36.226, 2600:1417:3f:69c::317f, 2600:1417:3f:688::317f\n",
             "Connecting to download.microsoft.com (download.microsoft.com)|23.40.36.226|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 824887076 (787M) [application/octet-stream]\n",
             "Saving to: ‘/tmp/cats-and-dogs.zip’\n",
             "\n",
-            "/tmp/cats-and-dogs. 100%[===================>] 786.67M   143MB/s    in 5.5s    \n",
+            "/tmp/cats-and-dogs. 100%[===================>] 786.67M   144MB/s    in 5.8s    \n",
             "\n",
-            "2022-10-23 06:22:03 (143 MB/s) - ‘/tmp/cats-and-dogs.zip’ saved [824887076/824887076]\n",
+            "2022-10-23 07:45:52 (135 MB/s) - ‘/tmp/cats-and-dogs.zip’ saved [824887076/824887076]\n",
             "\n"
           ]
         }
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "id": "DM851ZmN28J3",
         "tags": [
@@ -129,7 +129,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b3868bc9-dc1a-4101-d528-7d17cc685794"
+        "outputId": "0c74316f-f1c5-483a-bc91-ee8016a509bb"
       },
       "outputs": [
         {
@@ -184,7 +184,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 5,
       "metadata": {
         "cellView": "code",
         "id": "F-QkLjxpmyK2",
@@ -239,7 +239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 6,
       "metadata": {
         "id": "5dhtL344OK00",
         "tags": [
@@ -248,7 +248,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cb735e4e-b346-4b3b-bc46-8fcca41c1dc1"
+        "outputId": "454411ad-73c5-4cc1-ba69-181d2ddb21b9"
       },
       "outputs": [
         {
@@ -328,7 +328,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "cellView": "code",
         "id": "zvSODo0f9LaU",
@@ -354,22 +354,57 @@
         "  \"\"\"\n",
         "\n",
         "  ### START CODE HERE\n",
-        "  copyfile()\n",
-        "\n",
+        "  shuffled_data = random.sample(os.listdir(SOURCE_DIR), len(os.listdir(SOURCE_DIR)))\n",
+        "  training_size = int(len(shuffled_data) * SPLIT_SIZE)\n",
+        "  \n",
+        "  i = 0\n",
+        "  target = TRAINING_DIR\n",
+        "  for item in shuffled_data:\n",
+        "    item_source = os.path.join(SOURCE_DIR, item)\n",
+        "    if os.path.getsize(item_source) == 0:\n",
+        "      print(f'{item} is zero length, so ignoring.')\n",
+        "    else:\n",
+        "      copyfile(item_source, os.path.join(target, item))\n",
+        "      i += 1\n",
+        "    # changing target to VALIDATION_DIR if i equals training_size\n",
+        "    if i == training_size:\n",
+        "      target = VALIDATION_DIR\n",
         "  ### END CODE HERE\n"
       ],
       "id": "zvSODo0f9LaU"
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "FlIdoUeX9S-9",
         "tags": [
           "graded"
-        ]
+        ],
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7cb6257e-d9ae-42aa-b153-7f3266f76c0b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "666.jpg is zero length, so ignoring.\n",
+            "11702.jpg is zero length, so ignoring.\n",
+            "\n",
+            "\n",
+            "Original cat's directory has 12500 images\n",
+            "Original dog's directory has 12500 images\n",
+            "\n",
+            "There are 11250 images of cats for training\n",
+            "There are 11250 images of dogs for training\n",
+            "There are 1249 images of cats for validation\n",
+            "There are 1249 images of dogs for validation\n"
+          ]
+        }
+      ],
       "source": [
         "# Test your split_data function\n",
         "\n",
@@ -464,7 +499,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "cellView": "code",
         "id": "fQrZfVgz4j2g",
@@ -489,22 +524,22 @@
         "  ### START CODE HERE\n",
         "\n",
         "  # Instantiate the ImageDataGenerator class (don't forget to set the rescale argument)\n",
-        "  train_datagen = None\n",
+        "  train_datagen = ImageDataGenerator(rescale=1./255)\n",
         "\n",
         "  # Pass in the appropiate arguments to the flow_from_directory method\n",
-        "  train_generator = train_datagen.flow_from_directory(directory=None,\n",
-        "                                                      batch_size=None,\n",
-        "                                                      class_mode=None,\n",
-        "                                                      target_size=(None, None))\n",
+        "  train_generator = train_datagen.flow_from_directory(directory=TRAINING_DIR,\n",
+        "                                                      batch_size=10,\n",
+        "                                                      class_mode='binary',\n",
+        "                                                      target_size=(150, 150))\n",
         "\n",
         "  # Instantiate the ImageDataGenerator class (don't forget to set the rescale argument)\n",
-        "  validation_datagen = None\n",
+        "  validation_datagen = ImageDataGenerator(rescale=1./255)\n",
         "\n",
         "  # Pass in the appropiate arguments to the flow_from_directory method\n",
-        "  validation_generator = validation_datagen.flow_from_directory(directory=None,\n",
-        "                                                                batch_size=None,\n",
-        "                                                                class_mode=None,\n",
-        "                                                                target_size=(None, None))\n",
+        "  validation_generator = validation_datagen.flow_from_directory(directory=VALIDATION_DIR,\n",
+        "                                                                batch_size=10,\n",
+        "                                                                class_mode='binary',\n",
+        "                                                                target_size=(150, 150))\n",
         "  ### END CODE HERE\n",
         "  return train_generator, validation_generator\n"
       ],
@@ -512,14 +547,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "qM7FxrjGiobD",
         "tags": [
           "graded"
-        ]
+        ],
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c17f74bf-2eb0-425d-bf5d-d80e4d4a081b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found 22500 images belonging to 2 classes.\n",
+            "Found 2498 images belonging to 2 classes.\n"
+          ]
+        }
+      ],
       "source": [
         "# Test your generators\n",
         "train_generator, validation_generator = train_val_generators(TRAINING_DIR, VALIDATION_DIR)"
@@ -559,7 +607,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "cellView": "code",
         "id": "oDPK8tUB_O9e",
@@ -578,12 +626,24 @@
         "  ### START CODE HERE\n",
         "\n",
         "  model = tf.keras.models.Sequential([ \n",
-        "      None,\n",
+        "      tf.keras.layers.Conv2D(64,kernel_size=3, activation='relu', input_shape=(150, 150, 3)),\n",
+        "      tf.keras.layers.MaxPooling2D(2,2),\n",
+        "\n",
+        "      tf.keras.layers.Conv2D(32, kernel_size=3, activation='relu'),\n",
+        "      tf.keras.layers.MaxPooling2D(2,2),\n",
+        "      tf.keras.layers.Conv2D(16, kernel_size=3, activation='relu'),\n",
+        "      tf.keras.layers.MaxPooling2D(2,2),\n",
+        "\n",
+        "      # Flatten layer\n",
+        "      tf.keras.layers.Flatten(),\n",
+        "      tf.keras.layers.Dense(units=512, activation='relu'),\n",
+        "      # output layer\n",
+        "      tf.keras.layers.Dense(units=1, activation='sigmoid'),\n",
         "  ])\n",
         "\n",
         "  \n",
-        "  model.compile(optimizer=None,\n",
-        "                loss=None,\n",
+        "  model.compile(optimizer=tf.keras.optimizers.Adam(),\n",
+        "                loss=tf.keras.losses.BinaryCrossentropy(),\n",
         "                metrics=['accuracy']) \n",
         "    \n",
         "  ### END CODE HERE\n",
@@ -609,9 +669,65 @@
       "execution_count": null,
       "metadata": {
         "id": "5qE1G6JB4fMn",
-        "tags": []
+        "tags": [],
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3e8e840b-fa5f-4d2f-b58b-d27c4970a5fa"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/15\n",
+            "1170/2250 [==============>...............] - ETA: 39s - loss: 0.6601 - accuracy: 0.6069"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/PIL/TiffImagePlugin.py:770: UserWarning: Possibly corrupt EXIF data.  Expecting to read 32 bytes but only got 0. Skipping tag 270\n",
+            "  \" Skipping tag %s\" % (size, len(data), tag)\n",
+            "/usr/local/lib/python3.7/dist-packages/PIL/TiffImagePlugin.py:770: UserWarning: Possibly corrupt EXIF data.  Expecting to read 5 bytes but only got 0. Skipping tag 271\n",
+            "  \" Skipping tag %s\" % (size, len(data), tag)\n",
+            "/usr/local/lib/python3.7/dist-packages/PIL/TiffImagePlugin.py:770: UserWarning: Possibly corrupt EXIF data.  Expecting to read 8 bytes but only got 0. Skipping tag 272\n",
+            "  \" Skipping tag %s\" % (size, len(data), tag)\n",
+            "/usr/local/lib/python3.7/dist-packages/PIL/TiffImagePlugin.py:770: UserWarning: Possibly corrupt EXIF data.  Expecting to read 8 bytes but only got 0. Skipping tag 282\n",
+            "  \" Skipping tag %s\" % (size, len(data), tag)\n",
+            "/usr/local/lib/python3.7/dist-packages/PIL/TiffImagePlugin.py:770: UserWarning: Possibly corrupt EXIF data.  Expecting to read 8 bytes but only got 0. Skipping tag 283\n",
+            "  \" Skipping tag %s\" % (size, len(data), tag)\n",
+            "/usr/local/lib/python3.7/dist-packages/PIL/TiffImagePlugin.py:770: UserWarning: Possibly corrupt EXIF data.  Expecting to read 20 bytes but only got 0. Skipping tag 306\n",
+            "  \" Skipping tag %s\" % (size, len(data), tag)\n",
+            "/usr/local/lib/python3.7/dist-packages/PIL/TiffImagePlugin.py:770: UserWarning: Possibly corrupt EXIF data.  Expecting to read 48 bytes but only got 0. Skipping tag 532\n",
+            "  \" Skipping tag %s\" % (size, len(data), tag)\n",
+            "/usr/local/lib/python3.7/dist-packages/PIL/TiffImagePlugin.py:788: UserWarning: Corrupt EXIF data.  Expecting to read 2 bytes but only got 0. \n",
+            "  warnings.warn(str(msg))\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2250/2250 [==============================] - 97s 39ms/step - loss: 0.6345 - accuracy: 0.6400 - val_loss: 0.5831 - val_accuracy: 0.6902\n",
+            "Epoch 2/15\n",
+            "2250/2250 [==============================] - 85s 38ms/step - loss: 0.5387 - accuracy: 0.7292 - val_loss: 0.5170 - val_accuracy: 0.7470\n",
+            "Epoch 3/15\n",
+            "2250/2250 [==============================] - 86s 38ms/step - loss: 0.4409 - accuracy: 0.7952 - val_loss: 0.4688 - val_accuracy: 0.7790\n",
+            "Epoch 4/15\n",
+            "2250/2250 [==============================] - 85s 38ms/step - loss: 0.3291 - accuracy: 0.8579 - val_loss: 0.5511 - val_accuracy: 0.7526\n",
+            "Epoch 5/15\n",
+            "2250/2250 [==============================] - 85s 38ms/step - loss: 0.1804 - accuracy: 0.9284 - val_loss: 0.6038 - val_accuracy: 0.7786\n",
+            "Epoch 6/15\n",
+            "2250/2250 [==============================] - 84s 37ms/step - loss: 0.0797 - accuracy: 0.9735 - val_loss: 0.8344 - val_accuracy: 0.7794\n",
+            "Epoch 7/15\n",
+            "2250/2250 [==============================] - 84s 37ms/step - loss: 0.0454 - accuracy: 0.9866 - val_loss: 1.0456 - val_accuracy: 0.7822\n",
+            "Epoch 8/15\n",
+            "2142/2250 [===========================>..] - ETA: 3s - loss: 0.0423 - accuracy: 0.9870"
+          ]
+        }
+      ],
       "source": [
         "# Get the untrained model\n",
         "model = create_model()\n",
@@ -735,6 +851,7 @@
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -754,6 +871,7 @@
     },
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     }
   },
