--- a/Copy_of_C2W1_Assignment.ipynb
+++ b/Copy_of_C2W1_Assignment.ipynb
@@ -607,7 +607,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 13,
       "metadata": {
         "cellView": "code",
         "id": "oDPK8tUB_O9e",
@@ -626,12 +626,12 @@
         "  ### START CODE HERE\n",
         "\n",
         "  model = tf.keras.models.Sequential([ \n",
-        "      tf.keras.layers.Conv2D(64,kernel_size=3, activation='relu', input_shape=(150, 150, 3)),\n",
+        "      tf.keras.layers.Conv2D(16,kernel_size=3, activation='relu', input_shape=(150, 150, 3)),\n",
         "      tf.keras.layers.MaxPooling2D(2,2),\n",
         "\n",
         "      tf.keras.layers.Conv2D(32, kernel_size=3, activation='relu'),\n",
         "      tf.keras.layers.MaxPooling2D(2,2),\n",
-        "      tf.keras.layers.Conv2D(16, kernel_size=3, activation='relu'),\n",
+        "      tf.keras.layers.Conv2D(64, kernel_size=3, activation='relu'),\n",
         "      tf.keras.layers.MaxPooling2D(2,2),\n",
         "\n",
         "      # Flatten layer\n",
@@ -673,7 +673,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3e8e840b-fa5f-4d2f-b58b-d27c4970a5fa"
+        "outputId": "9de23582-f2af-4da7-95e8-93c26f3d12c8"
       },
       "outputs": [
         {
@@ -681,50 +681,13 @@
           "name": "stdout",
           "text": [
             "Epoch 1/15\n",
-            "1170/2250 [==============>...............] - ETA: 39s - loss: 0.6601 - accuracy: 0.6069"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/PIL/TiffImagePlugin.py:770: UserWarning: Possibly corrupt EXIF data.  Expecting to read 32 bytes but only got 0. Skipping tag 270\n",
-            "  \" Skipping tag %s\" % (size, len(data), tag)\n",
-            "/usr/local/lib/python3.7/dist-packages/PIL/TiffImagePlugin.py:770: UserWarning: Possibly corrupt EXIF data.  Expecting to read 5 bytes but only got 0. Skipping tag 271\n",
-            "  \" Skipping tag %s\" % (size, len(data), tag)\n",
-            "/usr/local/lib/python3.7/dist-packages/PIL/TiffImagePlugin.py:770: UserWarning: Possibly corrupt EXIF data.  Expecting to read 8 bytes but only got 0. Skipping tag 272\n",
-            "  \" Skipping tag %s\" % (size, len(data), tag)\n",
-            "/usr/local/lib/python3.7/dist-packages/PIL/TiffImagePlugin.py:770: UserWarning: Possibly corrupt EXIF data.  Expecting to read 8 bytes but only got 0. Skipping tag 282\n",
-            "  \" Skipping tag %s\" % (size, len(data), tag)\n",
-            "/usr/local/lib/python3.7/dist-packages/PIL/TiffImagePlugin.py:770: UserWarning: Possibly corrupt EXIF data.  Expecting to read 8 bytes but only got 0. Skipping tag 283\n",
-            "  \" Skipping tag %s\" % (size, len(data), tag)\n",
-            "/usr/local/lib/python3.7/dist-packages/PIL/TiffImagePlugin.py:770: UserWarning: Possibly corrupt EXIF data.  Expecting to read 20 bytes but only got 0. Skipping tag 306\n",
-            "  \" Skipping tag %s\" % (size, len(data), tag)\n",
-            "/usr/local/lib/python3.7/dist-packages/PIL/TiffImagePlugin.py:770: UserWarning: Possibly corrupt EXIF data.  Expecting to read 48 bytes but only got 0. Skipping tag 532\n",
-            "  \" Skipping tag %s\" % (size, len(data), tag)\n",
-            "/usr/local/lib/python3.7/dist-packages/PIL/TiffImagePlugin.py:788: UserWarning: Corrupt EXIF data.  Expecting to read 2 bytes but only got 0. \n",
-            "  warnings.warn(str(msg))\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2250/2250 [==============================] - 97s 39ms/step - loss: 0.6345 - accuracy: 0.6400 - val_loss: 0.5831 - val_accuracy: 0.6902\n",
+            "2250/2250 [==============================] - 84s 37ms/step - loss: 0.5782 - accuracy: 0.6870 - val_loss: 0.4878 - val_accuracy: 0.7682\n",
             "Epoch 2/15\n",
-            "2250/2250 [==============================] - 85s 38ms/step - loss: 0.5387 - accuracy: 0.7292 - val_loss: 0.5170 - val_accuracy: 0.7470\n",
+            "2250/2250 [==============================] - 82s 36ms/step - loss: 0.4319 - accuracy: 0.7970 - val_loss: 0.4025 - val_accuracy: 0.8062\n",
             "Epoch 3/15\n",
-            "2250/2250 [==============================] - 86s 38ms/step - loss: 0.4409 - accuracy: 0.7952 - val_loss: 0.4688 - val_accuracy: 0.7790\n",
+            "2250/2250 [==============================] - 83s 37ms/step - loss: 0.3345 - accuracy: 0.8511 - val_loss: 0.3759 - val_accuracy: 0.8279\n",
             "Epoch 4/15\n",
-            "2250/2250 [==============================] - 85s 38ms/step - loss: 0.3291 - accuracy: 0.8579 - val_loss: 0.5511 - val_accuracy: 0.7526\n",
-            "Epoch 5/15\n",
-            "2250/2250 [==============================] - 85s 38ms/step - loss: 0.1804 - accuracy: 0.9284 - val_loss: 0.6038 - val_accuracy: 0.7786\n",
-            "Epoch 6/15\n",
-            "2250/2250 [==============================] - 84s 37ms/step - loss: 0.0797 - accuracy: 0.9735 - val_loss: 0.8344 - val_accuracy: 0.7794\n",
-            "Epoch 7/15\n",
-            "2250/2250 [==============================] - 84s 37ms/step - loss: 0.0454 - accuracy: 0.9866 - val_loss: 1.0456 - val_accuracy: 0.7822\n",
-            "Epoch 8/15\n",
-            "2142/2250 [===========================>..] - ETA: 3s - loss: 0.0423 - accuracy: 0.9870"
+            "2247/2250 [============================>.] - ETA: 0s - loss: 0.2240 - accuracy: 0.9076"
           ]
         }
       ],
