--- a/C2W2_Assignment.ipynb
+++ b/C2W2_Assignment.ipynb
@@ -67,7 +67,7 @@
         "id": "3sd9dQWa23aj",
         "lines_to_next_cell": 2,
         "tags": [],
-        "outputId": "5cd211b8-e2b7-4da2-c5be-e728cce105d8",
+        "outputId": "3eee173e-b509-46d5-9e51-aea7813a05e5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -77,16 +77,16 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-10-24 01:39:34--  https://download.microsoft.com/download/3/E/1/3E1C3F21-ECDB-4869-8368-6DEBA77B919F/kagglecatsanddogs_5340.zip\n",
-            "Resolving download.microsoft.com (download.microsoft.com)... 23.36.48.252, 2600:1413:b000:793::317f, 2600:1413:b000:78a::317f\n",
+            "--2022-10-24 02:14:48--  https://download.microsoft.com/download/3/E/1/3E1C3F21-ECDB-4869-8368-6DEBA77B919F/kagglecatsanddogs_5340.zip\n",
+            "Resolving download.microsoft.com (download.microsoft.com)... 23.36.48.252, 2600:1413:b000:78a::317f, 2600:1413:b000:793::317f\n",
             "Connecting to download.microsoft.com (download.microsoft.com)|23.36.48.252|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 824887076 (787M) [application/octet-stream]\n",
             "Saving to: ‘/tmp/cats-and-dogs.zip’\n",
             "\n",
-            "/tmp/cats-and-dogs. 100%[===================>] 786.67M   266MB/s    in 3.0s    \n",
+            "/tmp/cats-and-dogs. 100%[===================>] 786.67M   275MB/s    in 2.9s    \n",
             "\n",
-            "2022-10-24 01:39:37 (266 MB/s) - ‘/tmp/cats-and-dogs.zip’ saved [824887076/824887076]\n",
+            "2022-10-24 02:14:51 (275 MB/s) - ‘/tmp/cats-and-dogs.zip’ saved [824887076/824887076]\n",
             "\n"
           ]
         }
@@ -126,7 +126,7 @@
         "tags": [
           "graded"
         ],
-        "outputId": "7e9d560f-5554-4229-8cc4-8179b59a594d",
+        "outputId": "c6c5592d-d8cd-4514-e33a-ec2ddd40d618",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -246,7 +246,7 @@
         "tags": [
           "graded"
         ],
-        "outputId": "d787ee56-0c66-46c3-fadf-8c8b518f0ef4",
+        "outputId": "96e00b37-4c25-446d-91ef-a2056ef73812",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -331,7 +331,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 14,
       "metadata": {
         "cellView": "code",
         "id": "zvSODo0f9LaU",
@@ -357,24 +357,28 @@
         "    None\n",
         "  \"\"\"\n",
         "  ### START CODE HERE\n",
-        "  filtered_dir = os.path.join(SOURCE_DIR, 'filtered_dir')\n",
-        "  os.makedirs(filtered_dir)\n",
-        "  for item in SOURCE_DIR:\n",
-        "    item_path = os.path.join(SOURCE_DIR, item)\n",
-        "    if os.path.getsize(item_path) == 0:\n",
-        "      print(f'{item} is zero length, so ignoring')\n",
-        "    else:\n",
-        "      copyfile(item_path, filtered_dir)\n",
-        "\n",
-        "  shuffled = random.sample(os.listdir(filtered_dir), len(os.listdir(filtered_dir)))\n",
+        "  # filtered_dir = os.path.join(SOURCE_DIR, 'filtered_dir')\n",
+        "  # os.makedirs(filtered_dir)\n",
+        "  # for item in SOURCE_DIR:\n",
+        "  #   item_path = os.path.join(SOURCE_DIR, item)\n",
+        "  #   if os.path.getsize(item_path) == 0:\n",
+        "  #     print(f'{item} is zero length, so ignoring')\n",
+        "  #   else:\n",
+        "  #     copyfile(item_path, filtered_dir)\n",
+        "  \n",
+        "  shuffled = random.sample(os.listdir(SOURCE_DIR), len(os.listdir(SOURCE_DIR)))\n",
         "  training_size = int(len(shuffled)*SPLIT_SIZE)\n",
         "\n",
         "  count = 1\n",
         "  target = TRAINING_DIR\n",
         "  for item in shuffled:\n",
-        "    item_path = os.join.path(SOURCE_DIR, item)\n",
-        "    copyfile(item_path, target)\n",
+        "    item_path = os.path.join(SOURCE_DIR, item)\n",
+        "    if os.path.getsize(item_path) ==0:\n",
+        "      print(f\"{item} is zero length, so ignoring.\")\n",
+        "    else:\n",
+        "      copyfile(item_path, os.path.join(target, item))\n",
         "\n",
+        "    # Changing target if the count equals training size.\n",
         "    if count == training_size:\n",
         "      target = VALIDATION_DIR\n",
         "\n",
@@ -384,13 +388,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 15,
       "metadata": {
         "id": "FlIdoUeX9S-9",
         "tags": [
           "graded"
         ],
-        "outputId": "4ad272ec-7621-4642-c4fd-a7672912395f",
+        "outputId": "73c735f7-1005-4db6-8966-b7089d8c2f13",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 380
@@ -404,10 +408,10 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mIsADirectoryError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-9-a1368e145614>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;31m# Run the function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;31m# NOTE: Messages about zero length images should be printed out\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m \u001b[0msplit_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mCAT_SOURCE_DIR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTRAINING_CATS_DIR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mVALIDATION_CATS_DIR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msplit_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m \u001b[0msplit_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDOG_SOURCE_DIR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTRAINING_DOGS_DIR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mVALIDATION_DOGS_DIR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msplit_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-8-7412c9c1d93e>\u001b[0m in \u001b[0;36msplit_data\u001b[0;34m(SOURCE_DIR, TRAINING_DIR, VALIDATION_DIR, SPLIT_SIZE)\u001b[0m\n\u001b[1;32m     22\u001b[0m       \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'{item} is zero length, so ignoring'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m       \u001b[0mcopyfile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfiltered_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m   \u001b[0mshuffled\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfiltered_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfiltered_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-15-a1368e145614>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;31m# Run the function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;31m# NOTE: Messages about zero length images should be printed out\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m \u001b[0msplit_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mCAT_SOURCE_DIR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTRAINING_CATS_DIR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mVALIDATION_CATS_DIR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msplit_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m \u001b[0msplit_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDOG_SOURCE_DIR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTRAINING_DOGS_DIR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mVALIDATION_DOGS_DIR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msplit_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-14-3e401b68c6c4>\u001b[0m in \u001b[0;36msplit_data\u001b[0;34m(SOURCE_DIR, TRAINING_DIR, VALIDATION_DIR, SPLIT_SIZE)\u001b[0m\n\u001b[1;32m     34\u001b[0m       \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"{item} is zero length, so ignoring.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m       \u001b[0mcopyfile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m     \u001b[0;31m# Changing target if the count equals training size.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/lib/python3.7/shutil.py\u001b[0m in \u001b[0;36mcopyfile\u001b[0;34m(src, dst, follow_symlinks)\u001b[0m\n\u001b[1;32m    118\u001b[0m         \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msymlink\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadlink\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdst\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    119\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 120\u001b[0;31m         \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfsrc\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    121\u001b[0m             \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdst\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'wb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfdst\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    122\u001b[0m                 \u001b[0mcopyfileobj\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfsrc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfdst\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mIsADirectoryError\u001b[0m: [Errno 21] Is a directory: '/'"
+            "\u001b[0;31mIsADirectoryError\u001b[0m: [Errno 21] Is a directory: '/tmp/PetImages/Cat/filtered_dir'"
           ]
         }
       ],
